--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -4,16 +4,24 @@ Layout Rules
     Layout styles can also be divided into major and minor styles based on reuse. Major layout styles such as header and footer are traditionally styled using ID selectors but take the time to think about the elements that are common across all components of the page and use class selectors where appropriate.
 */
 
-.sidebar {
+.sidebar  {
     position: absolute;
     bottom: 0;
     left: 25;
     //right: 0;
-    top: 70vh;
-    width: 30%;
+    top: 65vh;
+    width: 45%;
     line-height: 24px;
 	@media screen and (max-width: $tablet) {
 	position: static;
 	width: 100%;
 	}
+}
+
+nav[role="navigation"] li {
+    display: block;
+}
+
+footer {
+    margin-top: 28px;
 }
