--- a/scss/_module.scss
+++ b/scss/_module.scss
@@ -7,8 +7,7 @@ Module Rules
 
 .zen-validate-html, .zen-validate-css, .zen-license, .zen-accessibility, .zen-github {
     //display: inline-block;
-    margin-left: 14px;
-    margin-top: 20px;
+    margin-left: 30px;
     width: 50px;
     height: 50px;
     //line-height: 50px;
@@ -31,4 +30,9 @@ a.hover .zen-validate-html, .zen-validate-css, .zen-license, .zen-accessibility,
 }
 
 
-
+.supporting, .preamble, .summary, .sidebar, design-archives {
+ @media screen and (max-width: $tablet) {
+    padding: 0 10px;
+     box-sizing: border-box;
+ }
+}
