--- a/style.css
+++ b/style.css
@@ -1035,12 +1035,22 @@ h1 {
   color: #fff;
   line-height: 60px;
 }
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 60px;
+  }
+}
 
 h2 {
   font-family: 'satisfy', pacifico, cursive;
   font-size: 50px;
   color: #fff;
   line-height: 1px;
+}
+@media screen and (max-width: 768px) {
+  h2 {
+    font-size: 40px;
+  }
 }
 
 h3 {
@@ -1054,6 +1064,11 @@ h3 {
   font-family: 'lato', open-sans, sans-serif;
   font-size: 22px;
   text-align: left;
+}
+@media screen and (max-width: 768px) {
+  .summary {
+    font-size: 20px;
+  }
 }
 
 .preamble, .explanation, .participation, .benefits, .requirements {
@@ -1097,7 +1112,7 @@ a:hover, a:focus {
 }
 
 header {
-  height: 270px;
+  height: 30vh;
   padding: 20px 0 70px 0;
   background: #DBD8D4 50%;
   background-attachment: fixed, scroll, scroll, scroll;
@@ -1113,6 +1128,10 @@ header {
 Base Rules
 	A Base rule is applied to an element using an element selector, a descendent selector, or a child selector, along with any pseudoclasses. It doesn’t include any class or ID selectors. It is defining the default styling for how that element should look in all occurrences on the page.
 */
+abbr {
+  border: none;
+}
+
 /* 
 Layout Rules
     CSS, by its very nature, is used to lay elements out on the page. However, there is a distinction between layouts dictating the major and minor components of a page. The minor components—such as a callout, or login form, or a navigation item—sit within the scope of major components such as a header or footer. I refer to the minor components as Modules and will dive into those in the next section. The major components are referred to as Layout styles.
@@ -1122,8 +1141,8 @@ Layout Rules
   position: absolute;
   bottom: 0;
   left: 25;
-  top: 70vh;
-  width: 30%;
+  top: 65vh;
+  width: 45%;
   line-height: 24px;
 }
 @media screen and (max-width: 768px) {
@@ -1133,14 +1152,21 @@ Layout Rules
   }
 }
 
+nav[role="navigation"] li {
+  display: block;
+}
+
+footer {
+  margin-top: 28px;
+}
+
 /* 
 Module Rules
     A Module is a more discrete component of the page. It is your navigation bars and your carousels and your dialogs and your widgets and so on. This is the meat of the page. Modules sit inside Layout components. Modules can sometimes sit within other Modules, too. Each Module should be designed to exist as a standalone component. In doing so, the page will be more flexible. If done right, Modules can easily be moved to different parts of the layout without breaking.
     When defining the rule set for a module, avoid using IDs and element selectors, sticking only to class names. A module will likely contain a number of elements and there is likely to be a desire to use descendent or child selectors to target those elements. 
 */
 .zen-validate-html, .zen-validate-css, .zen-license, .zen-accessibility, .zen-github {
-  margin-left: 14px;
-  margin-top: 20px;
+  margin-left: 30px;
   width: 50px;
   height: 50px;
   background-image: url(buttonteal.png);
@@ -1155,6 +1181,15 @@ Module Rules
 
 a.hover .zen-validate-html, .zen-validate-css, .zen-license, .zen-accessibility, .zen-github {
   background-image: lighten, 50%;
+}
+
+@media screen and (max-width: 768px) {
+  .supporting, .preamble, .summary, .sidebar, design-archives {
+    padding: 0 10px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
 }
 
 /* 
